
 * Upgrade to PowerShell 4.
 * Remove usages of `Complete-Job`.  We removed it because it was total crap.  Use PowerShell's `Wait-Job` cmdlet instead.
 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) now only grants permissions on an object if those permissions aren't present.  To preserve previous behaviour, add the `-Force` switch to all `Grant-Permission` usages.
 * [Install-Msi](http://get-carbon.org/help/Install-Msi.html) (fka `Invoke-WindowsInstaller`) now only installs the MSI if it isn't already installed. To preserve the previous behavior and always install, add the `-Force` switch to all `Invoke-WindowsInstaller`\`Install-Msi` usages.
 * The following commands no longer return the stdout output from the console applications each one calls. To see that output, use the `-Verbose` switch. Remove any usage of the output you were processing.
     * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html)
     * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html)
     * [Remove-SslCertificateBinding](http://get-carbon.org/help/Remove-SslCertificateBinding.html)
     * [Install-IisAppPool](http://get-carbon.org/help/Install-IisAppPool.html)
     * [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html)
     * [Install-Service](http://get-carbon.org/help/Install-Service.html)
     * [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html)
     * [Add-IisDefaultDocument](http://get-carbon.org/help/Add-IisDefaultDocument.html)
     * [Enable-IisDirectoryBrowsing](http://get-carbon.org/help/Enable-IisDirectoryBrowsing.html)
     * [Enable-Ssl](http://get-carbon.org/help/Enable-Ssl.html)
 * Ensure that all thumbprints passed to [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) are valid (40 character hex strings).